# dlib-face-recognition

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  readme.md
benches/: benchmarks.rs
cv/: Cargo.toml  build.rs
cv/src/: lib.rs  wrapper.rs
examples/: .gitignore  Cargo.toml  README.md  compare_faces.rs  draw.rs
examples/compare_faces/: Cargo.toml
examples/compare_faces/src/: args.rs  main.rs
examples/draw/: Cargo.toml
examples/draw/src/: args.rs  main.rs
src/: base.rs  embed.rs  face_detection.rs  face_encoding.rs  geometry.rs  image_matrix.rs  landmark_prediction.rs  lib.rs  matrix.rs  wrapper.rs
src/face_detection/: base.rs  cnn.rs  hog.rs  location.rs  mod.rs
src/face_encoding/: base.rs  compare.rs  encoding.rs  encodings.rs  mod.rs  network.rs  nn.rs
src/landmark_prediction/: base.rs  landmarks.rs  mod.rs  model.rs
sys/: Cargo.toml  README.md  build.rs
tests/: benchmarks.rs  utilities_tests.rs
