[workspace]
default-members = ["."]
members = [".", "./examples/compare_faces", "./examples/draw", "./sys"]
resolver = "3"

[workspace.dependencies]
bzip2 = "0.6"
clap = "4.6"
cmake = "0.1"
cpp = "0.5"
cpp_build = "0.5"
dlib-face-recognition = { path = ".", default-features = false }
dlib-face-recognition-sys = { path = "./sys", default-features = false }
fs_extra = "1.3"
glob = "0.3"
image = { version = "0.25", default-features = false }
lazy_static = "1.5"
pkg-config = "0.3"
reqwest = "0.13"
sys-info = "0.9"
zip = "8.6"

[workspace.package]
authors = [
    "Ashley <expenses@airmail.cc>",
    "Ho Kim <great.ho.kim@gmail.com>",
    "João Pedro Sanches Dovichi <jsanchesdovichi@gmail.com>",
]
description = "Unofficial Rust wrappers to the C++ library dlib, face recognition tools"
documentation = "https://github.com/ulagbulag/dlib-face-recognition"
edition = "2024"
homepage = "https://github.com/ulagbulag/dlib-face-recognition"
include = ["build.rs", "Cargo.toml", "LICENSE", "src/**/*.rs"]
keywords = ["dlib", "face-recognition", "object-detection"]
license = "BSD-3-Clause"
readme = "./README.md"
repository = "https://github.com/ulagbulag/dlib-face-recognition"

[profile.release]
lto = true

[package]
name = "dlib-face-recognition"
version = "0.3.2"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

build = "build.rs"

[package.metadata.docs.rs]
features = ["build-native"] # otherwise the build will fail in docs.rs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
build-native = ["dep:dlib-face-recognition-sys"]
openblas = []

embed-all = ["embed-fd-nn", "embed-fe-nn", "embed-lp"]
embed-any = ["bzip2", "reqwest"]

embed-fd-nn = ["embed-any"]
embed-fe-nn = ["embed-any"]
embed-lp = ["embed-any"]

[dependencies]
bzip2 = { workspace = true, optional = true }
cpp = { workspace = true }
dlib-face-recognition-sys = { workspace = true, optional = true }
image = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["blocking"] }

[build-dependencies]
cpp_build = { workspace = true }
sys-info = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
