[package]
name = "dlib-face-recognition-cv"
version = "0.1.0"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

description = "Unofficial Rust wrappers to the C++ library dlib, face recognition tools"
homepage = "https://github.com/podo-os"
repository = "https://github.com/podo-os/dlib-face-recognition"
readme = "../README.md"
license = "BSD-3-Clause"

build = "build.rs"

include = [
    "src/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp = "0.5"
dlib-face-recognition = "0.1"
opencv = "0.38"

[build-dependencies]
cpp_build = "0.5"
