[package]
name = "dlib-face-recognition-sys"
version = "19.24.0-rc.1"
authors = ["Ho Kim <great.ho.kim@gmail.com>"]
edition = "2021"

description = "Unofficial Rust wrappers to the C++ library dlib, face recognition tools"
homepage = "https://github.com/podo-os"
repository = "https://github.com/podo-os/dlib-face-recognition"
readme = "README.md"
license = "BSD-3-Clause"

build = "build.rs"
links = "dlib"

include = ["src/**/*.rs", "build.rs", "Cargo.toml", "LICENSE"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"
fs_extra = "1.2"
glob = "0.3"
pkg-config = "0.3"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.5"
