[package]
name = "dlib-face-recognition-sys"
version = "19.24.0-rc.1"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

build = "build.rs"
links = "dlib"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = { workspace = true }
fs_extra = { workspace = true }
glob = { workspace = true }
pkg-config = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
zip = { workspace = true }
